# EdgeGestureHub

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.codex/: collect_action_tmp.py  make_neai_csv.py  project-handoff.md  read_pdf_tmp.py  uart_probe.py
Objects/: app_task.o.attr.txt  app_task_fromelf.txt  armcc_help2.txt  fromelf_help.txt  gesture_obj_attrs.txt  ipca_attr.txt  main_attr_latest.txt  main_obj_attrs.txt  neai_entry_attr.txt  startup_stm32f407xx.o.attr.txt  stm32f4xx_hal.o.attr.txt  system_stm32f4xx.o.attr.txt  wtest.c  wtest_default.txt
cmake/: STM32F407VETX_FLASH.ld  gcc-arm-none-eabi.cmake  neai_compat.c
config/: dev-config.ps1
cubemx/EdgeGestureHub/: .mxproject  EdgeGestureHub.ioc
cubemx/EdgeGestureHub/Core/Inc/: app_config.h  app_task.h  control_logic.h  firewater.h  gesture_engine.h  i2c.h  imu_service.h  main.h  oled_service.h  usart.h
cubemx/EdgeGestureHub/Core/Src/: app_task.c  control_logic.c  firewater.c  gesture_engine.c  gpio.c  i2c.c  imu_service.c  main.c  oled_service.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  usart.c
cubemx/EdgeGestureHub/Drivers/BSP/Inc/: mpu6050.h  ssd1306.h
cubemx/EdgeGestureHub/Drivers/BSP/Src/: mpu6050.c  ssd1306.c
cubemx/EdgeGestureHub/MDK-ARM/: EdgeGestureHub.uvguix.prohibit  EdgeGestureHub.uvoptx  EdgeGestureHub.uvprojx  startup_stm32f407xx.lst
cubemx/EdgeGestureHub/MDK-ARM/EdgeGestureHub/: EdgeGestureHub.axf  EdgeGestureHub.build_log.htm  EdgeGestureHub.hex  EdgeGestureHub.htm  EdgeGestureHub.lnp  EdgeGestureHub.map  EdgeGestureHub.recover_EdgeGestureHub.dep  EdgeGestureHub_EdgeGestureHub.dep  app_task.crf  app_task.d  control_logic.crf  control_logic.d  firewater.crf  firewater.d  gesture_engine.crf  gesture_engine.d  gpio.crf  gpio.d  i2c.crf  i2c.d  imu_service.crf  imu_service.d  main.crf  main.d  mpu6050.crf  mpu6050.d  oled_service.crf  oled_service.d  ssd1306.crf  ssd1306.d  startup_stm32f407xx.d  startup_stm32f407xx.lst  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  (+32 more)
cubemx/EdgeGestureHub/MDK-ARM/scripts/: build-keil.ps1  dev-all.ps1  monitor-serial.ps1  sync-target-to-probe.ps1
cubemx/EdgeGestureHub/MDK-ARM/tools/: uart_logger.py
libneai_project-2026-03-15-16-00_2/: NanoEdgeAI.h  metadata.json
libneai_project-2026-03-15-16-00_3/: NanoEdgeAI.h  metadata.json
logs/dataset/: accept_idle2_10s_v2_20260315_212048.csv  accept_idle_10s_v2_20260315_211912.csv  accept_move_10s_v2_20260315_212002.csv  acceptance_idle10_move10_idle10_20260315_211610.csv  after_fix_status_20260315_211312.csv  down_20260315_155624.csv  gesture_abnormal_val_20260315_195438.csv  idle_20260315_155227.csv  idle_learn_val_20260315_195324.csv  idle_regular_val_20260315_195346.csv  left_20260315_155340.csv  monitor_idle5_move10_20260315_201924.csv  oled_status_check_20260315_203624.csv  post_cls3state_20260315_201247.csv  post_neai_smoke_20260315_200725.csv  retest_idle5_move10_after_tune_20260315_202435.csv  retest_idle5_move10_th83_20260315_202623.csv  retest_idle6_after_lock_20260315_202339.csv  right_20260315_155434.csv  up_20260315_155530.csv
logs/dataset/neai/: down_20260315_155624.csv  gesture_abnormal_val_20260315_195438.csv  idle_20260315_155227.csv  idle_learn_val_20260315_195324.csv  idle_regular_val_20260315_195346.csv  left_20260315_155340.csv  right_20260315_155434.csv  up_20260315_155530.csv
project-skills/edgegesture-handoff/references/: project-status.md
scripts/: build-keil.ps1  collect-action-csv.ps1  flash-stlink.ps1  sync-target-to-probe.ps1
scripts/lib/: apply-keil-target.ps1
tools/: Invoke-Stm32Build.ps1  uart_logger.py
我自己看的文档/: EdgeGestureHub_项目实施步骤.md  NanoEdge_AI_全程操作文档.md  代码阅读顺序指南.md
文档/: Edge-Gesture-Hub-Executable-Spec.md  EdgeGestureHub_项目实施步骤.md  从CubeMX开始独立编码施工手册.md  代码阅读顺序指南.md  硬件连接图文档.md  项目设计文档.md
(+5 files in other folders)
